- added search http get request - implemented simple db search querys on /search route in api - detail/reservation page on double click of recycleview item (1 click show description)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
         <activity android:name=".travels.TravelsActivity"/>
         <activity android:name=".CreateAccountActivity"/>
+        <activity android:name=".travels.ReserveActivity"/>
     </application>
 
 </manifest>
